--- a/Team_1/Final_project/Makefile
+++ b/Team_1/Final_project/Makefile
@@ -1,7 +1,13 @@
-obj-m := MCP2515_linux_module.o
+obj-m := mcp2515.o
 KDIR := /lib/modules/$(shell uname -r)/build
+PWD := $(shell pwd)
 
 all:
-	$(MAKE) -C $(KDIR) M=$(shell pwd)  modules
+	$(MAKE) -C $(KDIR) M=$(PWD) modules
+
 clean:
-	$(MAKE) -C $(KDIR) M=$(shell pwd)  clean
+	$(MAKE) -C $(KDIR) M=$(PWD) clean
+
+install:
+	$(MAKE) -C $(KDIR) M=$(PWD) modules_install
+
